# jimeng-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/jimeng_mcp/: auth.py  client.py  models.py  server.py
