[project]
name = "jimeng-ai-mcp"
version = "0.1.0"
description = "MCP server for Jimeng AI (即梦) - Official Volcengine API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "jimeng", "volcengine", "ai", "image-generation", "video-generation"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
jimeng-mcp = "jimeng_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jimeng_mcp"]

